--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -11,6 +11,24 @@
 
 
 {  
+name:"คนมหากาฬพิฆาตนรก (2024)",
+image:"https://img.inwiptv.net/postor/20240920201732a869Prbl9FEWeWPWSw0Q3phE4Iv.jpg",
+url:"https://m1free.inwstream.com:1936/movie4/Customs_Frontline_2024/Customs_Frontline_2024_th_1080.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+
+
+ 
+{  
 name:"มาสเตอร์เชฟ เดอะ โพรเฟสชันนัลส์ ประเทศไทย | Ep.4",
 image:"https://s1.dmcdn.net/v/X_BVc1dnPPsvA2hwu/x240",
 url:"https://vod3.cf.dmcdn.net/sec2(ru8PKLAvYSXimCbzyaci3zM-Sp_KSYCda59bW8tkZ9CPNp5DDGEipzkOMUJGzsUJR9QrJi2HNsByfhKhAPI_5nRKnnE3wSMY3GVDIJ-8x-fr4wdinYX1vMVPor7EvYmRPDXkel1AmfPAHT3TFaEbphSbi9Be4N5qFlGyfmskH7uOPpELyZMUnexCK8wrwzyU)/video/872/012/570210278_mp4_h264_aac_fhd_2.m3u8",
