--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -2,7 +2,7 @@
 "name": "Movie<โรงหนังของแล้ม>",
 "image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/KM-LOGO/3.png",
 "url": "https://github.com/Tonnexter/Tonnexter/edit/KhunKamMee/Nexter%20Moviees.html", 
-"author": "[<อัพเดท:06.03.2568:10.00>]",
+"author": "[<อัพเดท:07.03.2568:10.00>]",
 "info": "โรงหนังของแล้ม",
 "stations" : [
 
@@ -10,6 +10,24 @@
 
 
 
+{  
+name:"มาสเตอร์เชฟ เดอะ โพรเฟสชันนัลส์ ประเทศไทย | Ep.5tt",
+image:"https://s1.dmcdn.net/v/Y1SVO1dpWSBXbpIma/x240",
+url:"https://vod3.cf.dmcdn.net/sec2/video/481/408/570804184_mp4_h264_aac_fhd_1.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+
+
+ 
 {  
 name:"มาสเตอร์เชฟ เดอะ โพรเฟสชันนัลส์ ประเทศไทย | Ep.5",
 image:"https://s1.dmcdn.net/v/Y1SVO1dpWSBXbpIma/x240",
