--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -9,6 +9,42 @@
  
 
 
+
+{  
+name:"Drone Wars (2016) HDTV",
+image:"https://img.inwiptv.net/postor/20200517010014jkj96RTf6JRwqwPkFWHwhq8N08X.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Drone_Wars_2016/Drone_Wars_2016_th_1080p_HDTV.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+
+
+ 
+{  
+name:"Ultimate Justice (2017) HDTV",
+image:"https://img.inwiptv.net/postor/20200514133245xZ9rLbCawWvm06OuLnr9hJqg5hD.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Ultimate_Justice_2017/Ultimate_Justice_2017_th_1080p_HDTV.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+
+
  
 {  
 name:"ทรานส์ฟอร์เมอร์ส กำเนิดจักรกลอสูร (2023)",
