--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -125,32 +125,11 @@ url:"https://main.24playerhd.com/m3u8/43537fb1818b211fb53df524/43537fb1818b211fb
 {  
 name:"มาสเตอร์เชฟ เดอะ โพรเฟสชันนัลส์ ประเทศไทย | Ep.5",
 image:"https://s1.dmcdn.net/v/Y1SVO1dpWSBXbpIma/x240",
-url:"https://vod3.cf.dmcdn.net/sec2(A-022Qqn_Rnmlo0F9UM4-g9nEooFEhN6ymibzqhYtrBwHnmuv01WdjSeZcD3LEI-F_kSdDRrOlEOHCo4Ze6L_AiDnwHm2tAVV5KlUdttO5COWbwukyCBoE1mFQ9cNwbw1_ewVBwHZq1FPtZXEs2YGELpDx1RmQbmP6_Xicte3CunNu54jD4T-hpH32Jv89wl)/video/481/408/570804184_mp4_h264_aac_fhd_1.m3u8",
+url:"https://vod3.cf.dmcdn.net/sec2(pf9PA20NOkmrTj2lBnaQf26D-ReB44iVzqY1KRMDnZMNX5agSs0-WmMgOuHwgqiOvoAfZoutnVoZctKfKb-6lCZE4ymJJLQtIr2IzokdTy01xT26_lSU7I5iYsVPngCIoSPeyYEPdsYYfopO32fIufXPz_hIC__HrbijDe63tSsnrhyw2XJkHxrpttVuNQ8s)/video/481/408/570804184_mp4_h264_aac_hq_1.m3u8#cell=cf3",
 "referer": "https://www.123-hd.com/",
 "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
 "playInNatPlayer": "true"
 },
-
-
-
-
-
-
-
-
-
-
- {  
-name:"มาสเตอร์เชฟ เดอะ โพรเฟสชันนัลส์ ประเทศไทย | Ep.4",
-image:"https://s1.dmcdn.net/v/Y1SVO1dpWSBXbpIma/x240",
-url:"https://vod3.cf.dmcdn.net/sec2(PVAFqjPn27Ta36inWav_xQLmTSFVGzFPTeg-Cw4w6PzTdQ9uMPoYR2e3lnKW6JQ4_Z_69mgZ9LNJUNIunt8TfjAYV4ZzEzrPa2Wrbd6T4wqg4huGR8I8v-FDOEbJZIISPb50ez9nA7V2089r1gHBoFOLcluY0VGFQXwrozoyGRN3g-mOP5tyeS2BwMFNsg4S)/video/872/012/570210278_mp4_h264_aac_fhd_2.m3u8",
-"referer": "https://www.123-hd.com/",
-"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
-"playInNatPlayer": "true"
-},
-
-
-
 
 
 
