--- a/DigitalTV.html
+++ b/DigitalTV.html
@@ -1,7 +1,7 @@
 {
 "name": "TV Digital",
 "image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/KM-LOGO/2.png",
-"url": "https://pastebin.com/raw/AJM6tjku",
+"url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/DigitalTV.html",
 "stations" : [ 
 
 {
