--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -107,7 +107,7 @@ url:"https://main.24playerhd.com/m3u8/43537fb1818b211fb53df524/43537fb1818b211fb
 {  
 name:"มาสเตอร์เชฟ เดอะ โพรเฟสชันนัลส์ ประเทศไทย | Ep.5",
 image:"https://s1.dmcdn.net/v/Y1SVO1dpWSBXbpIma/x240",
-url:"https://vod3.cf.dmcdn.net/sec2(pf9PA20NOkmrTj2lBnaQf26D-ReB44iVzqY1KRMDnZMNX5agSs0-WmMgOuHwgqiOvoAfZoutnVoZctKfKb-6lCZE4ymJJLQtIr2IzokdTy01xT26_lSU7I5iYsVPngCIoSPeyYEPdsYYfopO32fIufXPz_hIC__HrbijDe63tSsnrhyw2XJkHxrpttVuNQ8s)/video/481/408/570804184_mp4_h264_aac_hq_1.m3u8#cell=cf3",
+url:"https://vod3.cf.dmcdn.net/sec2(eeftTh16-rsrqEO6BKSLiNBvzIISjj1Vp41hO5fN6fuaUa0fNwxofeIVHUpRXhRUChtKZNFpAgqaMiFzs4y0LYClxebQEEaQPBbD1_5RNVugOp2Zr0SM80VIoZASPMPU7j6NpImeSxTzuZNJnnvpISUU9cEW13STNFPw7Wl6ZM2F8HxvxDhGqkhSlziJzhHj)/video/481/408/570804184_mp4_h264_aac_fhd_1.m3u8",
 "referer": "https://www.123-hd.com/",
 "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
 "playInNatPlayer": "true"
