--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -11,6 +11,78 @@
 
 
 {  
+name:"แหกคุกมหาประลัย 3 (2019)",
+image:"https://img.inwiptv.net/postor/202004222050062.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Escape_Plan_3_The_Extractors_2019/Escape_Plan_3_The_Extractors_2019_th_1080p.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+
+
+ 
+{  
+name:"แหกคุกมหาประลัย 2 (2018)",
+image:"https://img.inwiptv.net/postor/20200424191657escape-plan-2-hades-5d9e41c9681ee.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Escape_Plan_2_Hades_2018/Escape_Plan_2_Hades_2018_th_1080p.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+
+
+ 
+{  
+name:"แหกคุกมหาประลัย (2013)",
+image:"https://img.inwiptv.net/postor/201705180905540e20f0ad0d9062cb53f1a8b4dabd49d7.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Escape-Plan-2013/Escape_Plan_2013_th_1080p_fw.m4v/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+
+
+ 
+{  
+name:"ผ่านรกทะลุตะวัน (1996)",
+image:"https://img.inwiptv.net/postor/20200421180551from-dusk-till-dawn-5400a7455f3a1.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/From_Dusk_Till_Dawn_1996/From_Dusk_Till_Dawn_1996_TH_1080p.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+
+
+ 
+{  
 name:"พยัคฆ์ร้ายใต้ดิน (2002)",
 image:"https://img.inwiptv.net/postor/20200512064938i-spy-5329e0b009510.jpg",
 url:"https://m1free.inwstream.com:1936/movie3/I_Spy_2002/I_Spy_2002_TH_1080p.mp4/chunk.m3u8",
