--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -165,9 +165,9 @@ url:"https://main.24playerhd.com/m3u8/43537fb1818b211fb53df524/43537fb1818b211fb
 
  
 {  
-name:"มาสเตอร์เชฟ เดอะ โพรเฟสชันนัลส์ ประเทศไทย | Ep.5",
+name:"มาสเตอร์เชฟ เดอะ โพรเฟสชันนัลส์ ประเทศไทย | Ep.6",
 image:"https://s1.dmcdn.net/v/Y1SVO1dpWSBXbpIma/x240",
-url:"https://www.dailymotion.com/video/x9fubbs",
+url:"https://www.dailymotion.com/video/x9gmwnm",
 "referer": "https://www.123-hd.com/",
 "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
 "playInNatPlayer": "true"
