--- a/DigitalTV.html
+++ b/DigitalTV.html
@@ -19,7 +19,7 @@
 "url": "https://snk-streamer2.cdn.3bbtv.com:8443/3bb/live/32/32.mpd", 
 "drm": "clearkey", "drmkey": "4b2bff3e598043cfaf949305e3d153fa:545df84ff4c54af6b5385516e0f65956",
 "referer": "https://3bbgigatv.com/",
-"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/134.0.0.0 Safari/537.36",
+"userAgent": "Mozilla/5.0 (m3u-ip.tv 2.3.10) Android",
 "playInNatPlayer": "true" 
 },   
 
