--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -11,9 +11,9 @@
 
 
 {  
-name:"ซิ่งระห่ำถนน (2015)",
-image:"https://img.inwiptv.net/postor/20200414164431Road%20Wars%20%E0%B8%8B%E0%B8%B4%E0%B9%88%E0%B8%87%E0%B8%A3%E0%B8%B0%E0%B8%AB%E0%B9%88%E0%B8%B3%E0%B8%96%E0%B8%99%E0%B8%99%20(2015).jpg",
-url:"https://m1free.inwstream.com:1936/movie2/Road%20Wars%20(2015)/Road%20Wars%20(2015)%20th%201080p%20fw.mp4/chunk.m3u8",
+name:"Death Fighter (2017)",
+image:"https://img.inwiptv.net/postor/202004051417011.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Death_Fighter_2017/Death_Fighter_2017_th_1080p_HDTV.mp4/chunk.m3u8",
 "referer": "https://www.123-hd.com/",
 "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
 "playInNatPlayer": "true"
@@ -27,12 +27,11 @@ url:"https://m1free.inwstream.com:1936/movie2/Road%20Wars%20(2015)/Road%20Wars%2
 
 
 
-
  
 {  
-name:"Tracker (2019) HDTV",
-image:"https://img.inwiptv.net/postor/202004120258135.jpg",
-url:"https://m1free.inwstream.com:1936/movie3/The_Tracker_2019/The_Tracker_2019_th_1080p_HDTV.mp4/chunk.m3u8",
+name:"ซิ่งระห่ำถนน (2015)",
+image:"https://img.inwiptv.net/postor/20200414164431Road%20Wars%20%E0%B8%8B%E0%B8%B4%E0%B9%88%E0%B8%87%E0%B8%A3%E0%B8%B0%E0%B8%AB%E0%B9%88%E0%B8%B3%E0%B8%96%E0%B8%99%E0%B8%99%20(2015).jpg",
+url:"https://m1free.inwstream.com:1936/movie2/Road%20Wars%20(2015)/Road%20Wars%20(2015)%20th%201080p%20fw.mp4/chunk.m3u8",
 "referer": "https://www.123-hd.com/",
 "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
 "playInNatPlayer": "true"
