--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -11,9 +11,28 @@
 
 
 {  
-name:"Death Fighter (2017)",
-image:"https://img.inwiptv.net/postor/202004051417011.jpg",
-url:"https://m1free.inwstream.com:1936/movie3/Death_Fighter_2017/Death_Fighter_2017_th_1080p_HDTV.mp4/chunk.m3u8",
+name:"Daughter of the Wolf (2019)",
+image:"https://img.inwiptv.net/postor/202003302120201.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Daughter_of_the_Wolf_2019/Daughter_of_the_Wolf_2019_TH_1080p.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+
+
+
+ 
+{  
+name:"Captive (2015)",
+image:"https://img.inwiptv.net/postor/202003291750451.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Captive_2015/Captive_2015_th_1080p_HDTV.mp4/chunk.m3u8",
 "referer": "https://www.123-hd.com/",
 "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
 "playInNatPlayer": "true"
