--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -11,6 +11,24 @@
 
 
 {  
+name:"คาร์แจ็กเกอร์ส (2025)",
+image:"https://img.inwiptv.net/postor/20250328105727wbkPMTz2vVai7Ujyp0ag7AM9SrO.jpg",
+url:"https://m1free.inwstream.com:1936/movie4/Carjackers_2025/Carjackers_2025_TH_1080p.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+
+
+ 
+{  
 name:"Daughter of the Wolf (2019)",
 image:"https://img.inwiptv.net/postor/202003302120201.jpg",
 url:"https://m1free.inwstream.com:1936/movie3/Daughter_of_the_Wolf_2019/Daughter_of_the_Wolf_2019_TH_1080p.mp4/chunk.m3u8",
