--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -27,6 +27,61 @@ url:"https://m1free.inwstream.com:1936/movie4/Carjackers_2025/Carjackers_2025_TH
 
 
 
+
+{  
+name:"นรกหยุดนรก (2025)",
+image:"https://img.inwiptv.net/postor/202503282014106FRFIogh3zFnVWn7Z6zcYnIbRcX.jpg",
+url:"https://m1free.inwstream.com:1936/movie4/A_Working_Man_2025/A_Working_Man_2025_thr_v1.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+
+
+
+{  
+name:"Into the Ashes (2019)",
+image:"https://img.inwiptv.net/postor/202003251517473.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Into_the_Ashes_2019/Into_the_Ashes_2019_th_1080p_HDTV.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+
+
+
+{  
+name:"Reprisal (2018)",
+image:"https://img.inwiptv.net/postor/202003251721316.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Reprisal_2018/Reprisal_2018_th_1080p_HDTV.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+ 
+
+
+
+
+
+
+
+
+
  
 {  
 name:"Daughter of the Wolf (2019)",
