--- a/Nexxxxxter.html
+++ b/Nexxxxxter.html
@@ -1,7 +1,7 @@
 {
 "name": "Nexter-xxxx",
 "image": "https://images.scalebranding.com/letter-av-logo-2707cdeb-8cb0-4c88-b673-0a281dbcf408.jpg",
-"url": "https://pastebin.com/LaVjHJMk", 
+"url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Nexxxxxter.html", 
 "stations" : [
 
 
