--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -2,7 +2,7 @@
 "name": "Movie<โรงหนังของแล้ม>",
 "image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/KM-LOGO/3.png",
 "url": "https://github.com/Tonnexter/Tonnexter/edit/KhunKamMee/Nexter%20Moviees.html", 
-"author": "[<อัพเดท:15.03.2568:10.00>]",
+"author": "[<อัพเดท:01.04.2568:10.00>]",
 "info": "โรงหนังของแล้ม",
 "stations" : [
 
@@ -11,9 +11,82 @@
 
 
 {  
-name:"คาร์แจ็กเกอร์ส (2025)",
-image:"https://img.inwiptv.net/postor/20250328105727wbkPMTz2vVai7Ujyp0ag7AM9SrO.jpg",
-url:"https://m1free.inwstream.com:1936/movie4/Carjackers_2025/Carjackers_2025_TH_1080p.mp4/chunk.m3u8",
+name:"สมรภูมิทะเลทราย (1995)",
+image:"https://img.inwiptv.net/postor/20250402081704Sahara-1995.jpg",
+url:"https://m1free.inwstream.com:1936/movie4/Sahara_1995/Sahara_1995_th_1080.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+
+
+
+ 
+{  
+name:"Kill Bill Vol. 1 (2003) นางฟ้าซามูไร",
+image:"https://img.inwiptv.net/postor/20200321112001Kill%20Bill%20Vol.%201%20(2003)%20%E0%B8%99%E0%B8%B2%E0%B8%87%E0%B8%9F%E0%B9%89%E0%B8%B2%E0%B8%8B%E0%B8%B2%E0%B8%A1%E0%B8%B9%E0%B9%84%E0%B8%A3.jpg",
+url:"https://m1free.inwstream.com:1936/movie1/Kill-Bill-Vol-2003-2004/Kill-Bill-Vol-1-2003-th-1080p.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+
+
+ 
+{  
+name:"Message Man (2018)",
+image:"https://img.inwiptv.net/postor/20200312162756eB5QkQkDt9UTXG23ChR9yzdXq3c.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Message_Man_2018/Message_Man_2018_TH_1080p.m4v/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+
+
+ 
+{  
+name:"The Brave (Lazarat) (2019)",
+image:"https://img.inwiptv.net/postor/202003211735107.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/The_Brave_2019/The_Brave_2019_th_1080p_HDTV.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+
+
+ 
+{  
+name:"Dead Shack (2017)",
+image:"https://img.inwiptv.net/postor/202003201655386.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Dead_Shack_2017/Dead_Shack_2017_th_1080p_HDTV.mp4/chunk.m3u8",
 "referer": "https://www.123-hd.com/",
 "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
 "playInNatPlayer": "true"
