--- a/NexterChannel.html
+++ b/NexterChannel.html
@@ -1,6 +1,6 @@
 {
 "name": "Khun KamMEE Channel",
-"author": "[บ้านคูณคำมี <อัพเดท:01.03.2568:12.00>]",
+"author": "[บ้านคูณคำมี <อัพเดท:01.04.2568:12.00>]",
 "image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/KM-LOGO/1.png",
 "url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/NexterChannel.html",
 "info": "[บ้านคูณคำมี แชนแนล <อัพเดท:01.04.2568:12.00>]",
@@ -88,7 +88,7 @@
 "author": "Nexter",
 "image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/Netflix11tt.jpg",
 "imageScale": "centerCrop",
-"url": "https://pastebin.com/raw/rwL9E0jb",
+"url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Nexter--%E0%B8%AB%E0%B8%99%E0%B8%B1%E0%B8%87%E0%B8%AD%E0%B8%AD%E0%B8%99%E0%B9%84%E0%B8%A5%E0%B8%99%E0%B9%8C--VOD.html",
 "import": "true"
 },
 
