--- a/Nexter-All-ChanNEL.html
+++ b/Nexter-All-ChanNEL.html
@@ -24,7 +24,7 @@
 "name": "GUFLIX มาดู มาฟัง! Nexter",
 "author": "Nexter",
 "image": "http://guflix.streaming-fast.com/logo/guflix.gif",
-"url": "https://pastebin.com/raw/vDPmGjiX",
+"url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/GUFLIX-Nexter.html",
 "import": "true"
 },
 
