--- a/Nexter-All-ChanNEL.html
+++ b/Nexter-All-ChanNEL.html
@@ -89,7 +89,7 @@
 {
 "name": "Nexter-RED STAR",
 "image": "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT2i-emdJtfwcYDc25ZrqOrtvQGIIzE284MDw&s",
-"url": "https://pastebin.com/raw/CMyG5dd3",
+"url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/REDSTAR-Nexter.html",
 "info": "Nexter-RED STAR",
 "import": false
  },
