--- a/Nexter-All-ChanNEL.html
+++ b/Nexter-All-ChanNEL.html
@@ -100,7 +100,7 @@
 {
 "name": "Nexter-Doo Tube",
 "image": "https://i.imgur.com/NeZsNcV.gif",
-"url": "https://pastebin.com/raw/sjNAs0BW",
+"url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/DooTube-Nexter.html",
 "info": "Nexter-Doo Tube",
 "import": false
  },
@@ -111,7 +111,7 @@
 {
 "name": "Nexter-KaoTomMud",
 "image": "https://i.postimg.cc/cL62jPgC/image.jpg",
-"url": "https://pastebin.com/raw/PLvSpZ1i",
+"url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/KaoTomMud-Nexter.html",
 "info": "Nexter-Doo Tube",
 "import": false
  },
