--- a/Nexter-Backup.html
+++ b/Nexter-Backup.html
@@ -31,10 +31,10 @@
 
 
 {
-"name": "DOO DEE",
+"name": "BlackStar",
 "author": "ใช้เฉพาะกลุ่ม PLAYID เท่านั้น",
 "image": "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSsUHi7Fw9RjsjzGz-tRIBKhFIENLvmUa-aAA&s",
-"url": "https://pastebin.com/raw/aa1V1hMp",
+"url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/BlackStar.html",
 "import": "true"
 },
 
@@ -57,7 +57,7 @@
 "name": "Luxdo Streaming TV PL",
 "author": "Luxdo TheMovieS Update 16/07/66 ",
 "image": "https://drive.google.com/uc?id=19oeAX0kf_LxYofdD-G0vj9UPCHdLpHMr",
-"url": "https://pastebin.com/raw/uxC5vqSe",
+"url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/LuxdoStreaming.html",
 "import": "true"
 },
 
@@ -66,7 +66,7 @@
 "name": "Thai Series",
 "author": "Nexter",
 "image": "https://img5.pic.in.th/file/secure-sv1/S__33333250.jpeg",
-"url": "https://pastebin.com/raw/ziivZc6z",
+"url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/SerriesThai.html",
 "import": "true"
 },
 
