--- a/Nexxxxxter.html
+++ b/Nexxxxxter.html
@@ -8,9 +8,24 @@
 
 
 {  
-name:"JUR-288 ทัวร์มิโนชิมะ",
-image:"https://fourhoi.com/jur-288/cover-n.jpg",
-url:"https://surrit.com/f1e2c999-3175-477d-ad4d-e98b5d926d6d/720p/video.m3u8",
+name:"JUR-274 Yuna",
+image:"https://fourhoi.com/jur-274/cover-n.jpg",
+url:"https://surrit.com/3d1d14c0-46f5-4fc6-950a-39180b45b1d9/720p/video.m3u8",
+"referer": "https://missav.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+{  
+name:"JUR-032 Madonna ALL Exclusive Bus Tour 2025",
+image:"https://fourhoi.com/jur-032/cover-t.jpg",
+url:"https://surrit.com/dad6c091-c0e0-47d1-bf40-0bf0fc724d41/720p/video.m3u8",
 "referer": "https://missav.com/",
 "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
 "playInNatPlayer": "true"
