--- a/Nexxxxxter.html
+++ b/Nexxxxxter.html
@@ -8,6 +8,36 @@
 
 
 {  
+name:"JUQ-972 yuna",
+image:"https://fourhoi.com/juq-972-uncensored-leak/cover-n.jpg",
+url:"https://surrit.com/2034192f-f1c4-4f7c-803b-3275cd713d14/1080p/video.m3u8",
+"referer": "https://missav.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+{  
+name:"CEAD-676 Yui Hatano",
+image:"https://fourhoi.com/cead-676/cover-n.jpg",
+url:"https://surrit.com/d328a2b8-3035-42c0-aa8d-13dbb97152b8/720p/video.m3u8",
+"referer": "https://missav.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+{  
 name:"JUR-274 Yuna",
 image:"https://fourhoi.com/jur-274/cover-n.jpg",
 url:"https://surrit.com/3d1d14c0-46f5-4fc6-950a-39180b45b1d9/720p/video.m3u8",
