--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -11,6 +11,61 @@
 
 
 {  
+name:"The Mercenary (2019)",
+image:"https://img.inwiptv.net/postor/20200303131558p17704972_v_v8_aa.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/The_Mercenary_2019/The_Mercenary_2019_TH_1080p.m4v/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+
+
+  
+{  
+name:"Outlawed (2018) HDTV",
+image:"https://img.inwiptv.net/postor/20200310090922476e2dd868977ab3a205d2e5dd890bce.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Outlawed_2018/Outlawed_2018_th_1080p_HDTV.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+
+
+  
+{  
+name:"เผด็จศึกยึดนิวยอร์ก (2019)",
+image:"https://img.inwiptv.net/postor/2020031121010421-bridges-5e392646e7dee.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/21_Bridges_2019/21_Bridges_2019_TH_1080p.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+
+
+
+  
+{  
 name:"แพนดอรัม ลอกชีพ (2009)",
 image:"https://img.inwiptv.net/postor/20200315172728pandorum-5d33345c09853.jpg",
 url:"https://m1free.inwstream.com:1936/movie3/Pandorum_2009/Pandorum_2009_TH_1080p.mp4/chunk.m3u8",
