--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -9,6 +9,24 @@
 
 
 
+
+{  
+name:"G20 (2025)",
+image:"https://img.inwiptv.net/postor/20250411100536wv6oWAleCJZUk5htrGg413t3GCy.jpg",
+url:"https://m1free.inwstream.com:1936/movie4/G20_2025/G20_2025_TH_1080p.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+
+
  
 {  
 name:"เผด็จศึกยึดนิวยอร์ก (2019)",
