--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -11,13 +11,16 @@
 
 
 {  
-name:"G20 (2025)",
-image:"https://img.inwiptv.net/postor/20250411100536wv6oWAleCJZUk5htrGg413t3GCy.jpg",
-url:"https://m1free.inwstream.com:1936/movie4/G20_2025/G20_2025_TH_1080p.mp4/chunk.m3u8",
+name:"The Amateur ร้ายสมัครเล่น (2025)",
+image:"https://img.inwiptv.net/postor/202504152244222grhfMw97MGbat6aH4lFSUnVDFE.jpg",
+url:"https://m1free.inwstream.com:1936/movie4/The_Amateur_2025/The_Amateur_2025_thr_v1.mp4/chunk.m3u8",
 "referer": "https://www.123-hd.com/",
 "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
 "playInNatPlayer": "true"
 },
+
+
+
 
 
 
@@ -28,25 +31,6 @@ url:"https://m1free.inwstream.com:1936/movie4/G20_2025/G20_2025_TH_1080p.mp4/chu
 
 
  
-{  
-name:"เผด็จศึกยึดนิวยอร์ก (2019)",
-image:"https://img.inwiptv.net/postor/2020031121010421-bridges-5e392646e7dee.jpg",
-url:"https://m1free.inwstream.com:1936/movie3/21_Bridges_2019/21_Bridges_2019_TH_1080p.mp4/chunk.m3u8",
-"referer": "https://www.123-hd.com/",
-"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
-"playInNatPlayer": "true"
-},
-
-
-
-
-
-
-
-
-
-
-  
 {  
 name:"แพนดอรัม ลอกชีพ (2009)",
 image:"https://img.inwiptv.net/postor/20200315172728pandorum-5d33345c09853.jpg",
