--- a/Nexxxxxter.html
+++ b/Nexxxxxter.html
@@ -9,6 +9,22 @@
 
 
 {  
+name:"SONE-724 ริริ นานาสึโมริ",
+image:"https://fourhoi.com/sone-724/cover-n.jpg",
+url:"https://surrit.com/c968a250-1aff-4772-94c6-ab4d246f361a/720p/video.m3u8",
+"referer": "https://missav.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+
+{  
 name:"FNS-023 ริน ฮาจิมิตสึ",
 image:"https://fourhoi.com/fns-023/cover-n.jpg",
 url:"https://surrit.com/7bbf45a4-c97b-414c-abac-c636040f1ce2/720p/video.m3u8",
