--- a/NexterChannel.html
+++ b/NexterChannel.html
@@ -1,9 +1,9 @@
 {
 "name": "Khun KamMEE Channel",
-"author": "[บ้านคูณคำมี <อัพเดท:01.04.2568:12.00>]",
+"author": "[บ้านคูณคำมี <อัพเดท:20.04.2568:12.00>]",
 "image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/KM-LOGO/1.png",
 "url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/NexterChannel.html",
-"info": "[บ้านคูณคำมี แชนแนล <อัพเดท:01.04.2568:12.00>]",
+"info": "[บ้านคูณคำมี แชนแนล <อัพเดท:20.04.2568:12.00>]",
 
 "groups": [
 
@@ -116,6 +116,18 @@
 "import": "true"
 },
 
+
+
+
+
+ {
+"name": "Nexter-KHUNKAMMEE-APP",
+"author": "Nexter",
+"image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/KM-LOGO/logo2.png",
+"imageScale": "fitStart",
+"url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/KHUNKAMMEEAPP.m3u",
+"import": "true"
+},
  
 
  
