--- a/NexterChannel.html
+++ b/NexterChannel.html
@@ -124,7 +124,7 @@
 "name": "Nexter-KHunKamMeeAPP",
 "author": "Nexter",
 "image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/KM-LOGO/logo2.png",
-"imageScale": "fitStart",
+"imageScale": "centerCrop",
 "url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/KHUNKAMMEEAPP.m3u",
 "import": "true"
 },
