--- a/Nexxxxxter.html
+++ b/Nexxxxxter.html
@@ -7,6 +7,37 @@
 
 
 
+{  
+name:"HBAD-259 AIKA",
+image:"https://fourhoi.com/hbad-259/cover-n.jpg",
+url:"https://surrit.com/fac64d98-188a-42ea-9822-9ba6b7461ff4/842x480/video.m3u8",
+"referer": "https://missav.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+{  
+name:"AVOP-062 AIKA",
+image:"https://fourhoi.com/avop-062/cover-t.jpg",
+url:"https://surrit.com/d35b8a8b-c2a1-403f-a528-bb99a565039f/1920x1080/video.m3u8",
+"referer": "https://missav.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+
 
 {  
 name:"DASS-617 แมรี่ ทาจิบานะ",
