--- a/Nexxxxxter.html
+++ b/Nexxxxxter.html
@@ -8,6 +8,66 @@
 
 
 {  
+name:"ECB-099 AIKA",
+image:"https://fourhoi.com/ecb-099/cover-n.jpg",
+url:"https://surrit.com/bed70e0a-862b-4ce4-8e95-2b3c7c1551a9/1280x720/video.m3u8",
+"referer": "https://missav.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+{  
+name:"JUX-777 AIKA",
+image:"https://fourhoi.com/jux-777-uncensored-leak/cover-n.jpg",
+url:"https://surrit.com/80877ac1-7126-4613-a239-ea59187d9e41/1280x720/video.m3u8",
+"referer": "https://missav.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+{  
+name:"WANZ-357 AIKA",
+image:"https://fourhoi.com/wanz-357/cover-n.jpg",
+url:"https://surrit.com/ca02944b-69d7-4eab-ae4c-4ff0148dac19/1280x720/video.m3u8",
+"referer": "https://missav.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+{  
+name:"PGD-772 AIKA",
+image:"https://fourhoi.com/pgd-772-uncensored-leak/cover-n.jpg",
+url:"https://surrit.com/c876e2cb-432d-4608-ae88-fc9a5bc5d6d2/1080p/video.m3u8",
+"referer": "https://missav.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+{  
 name:"HBAD-259 AIKA",
 image:"https://fourhoi.com/hbad-259/cover-n.jpg",
 url:"https://surrit.com/fac64d98-188a-42ea-9822-9ba6b7461ff4/842x480/video.m3u8",
